[gd_scene load_steps=65 format=2]

[ext_resource path="res://sounds/player/bigjump.wav" type="AudioStream" id=1]
[ext_resource path="res://sounds/player/jump.wav" type="AudioStream" id=2]
[ext_resource path="res://sounds/player/skid.wav" type="AudioStream" id=3]
[ext_resource path="res://images/player/tux/big/skid.png" type="Texture" id=4]
[ext_resource path="res://images/player/tux/big/jump.png" type="Texture" id=5]
[ext_resource path="res://images/player/tux/big/idle.png" type="Texture" id=6]
[ext_resource path="res://images/player/tux/big/walk1.png" type="Texture" id=7]
[ext_resource path="res://images/player/tux/big/walk3.png" type="Texture" id=8]
[ext_resource path="res://images/player/tux/big/walk4.png" type="Texture" id=9]
[ext_resource path="res://images/player/tux/big/walk5.png" type="Texture" id=10]
[ext_resource path="res://images/player/tux/big/walk6.png" type="Texture" id=11]
[ext_resource path="res://images/player/tux/big/walk2.png" type="Texture" id=12]
[ext_resource path="res://images/player/tux/big/kick.png" type="Texture" id=13]
[ext_resource path="res://images/player/tux/big/duck.png" type="Texture" id=14]
[ext_resource path="res://images/player/tux/small/idle.png" type="Texture" id=15]
[ext_resource path="res://images/player/tux/small/kick.png" type="Texture" id=16]
[ext_resource path="res://images/player/tux/small/walk2.png" type="Texture" id=17]
[ext_resource path="res://images/player/tux/small/walk1.png" type="Texture" id=18]
[ext_resource path="res://images/player/tux/small/jump.png" type="Texture" id=19]
[ext_resource path="res://images/player/tux/small/walk7.png" type="Texture" id=20]
[ext_resource path="res://images/player/tux/small/walk3.png" type="Texture" id=21]
[ext_resource path="res://images/player/tux/small/walk6.png" type="Texture" id=22]
[ext_resource path="res://images/player/tux/small/die0.png" type="Texture" id=23]
[ext_resource path="res://images/player/tux/small/walk4.png" type="Texture" id=24]
[ext_resource path="res://images/player/tux/small/walk8.png" type="Texture" id=25]
[ext_resource path="res://images/player/tux/small/walk5.png" type="Texture" id=26]
[ext_resource path="res://images/player/tux/small/die1.png" type="Texture" id=27]
[ext_resource path="res://scenes/player/Tux.gd" type="Script" id=28]
[ext_resource path="res://scenes/player/TuxSM.gd" type="Script" id=29]
[ext_resource path="res://scenes/master/SFX.gd" type="Script" id=30]
[ext_resource path="res://images/player/tux/small/skid.png" type="Texture" id=31]
[ext_resource path="res://sounds/player/hurt.wav" type="AudioStream" id=32]
[ext_resource path="res://sounds/player/powerup-grow.wav" type="AudioStream" id=33]
[ext_resource path="res://sounds/player/powerup-fire.wav" type="AudioStream" id=34]
[ext_resource path="res://images/player/tux/small/grab_arm.png" type="Texture" id=35]
[ext_resource path="res://images/player/tux/big/grab_arm.png" type="Texture" id=36]
[ext_resource path="res://scenes/player/Fireball.tscn" type="PackedScene" id=37]
[ext_resource path="res://sounds/player/shoot_fireball.wav" type="AudioStream" id=38]
[ext_resource path="res://images/particles/invincible_sparkle.png" type="Texture" id=39]
[ext_resource path="res://scenes/player/InvincibleParticles.gd" type="Script" id=40]
[ext_resource path="res://scenes/particles/InvincibleParticlesBig.tres" type="Material" id=41]
[ext_resource path="res://scenes/particles/InvincibleParticlesTrail.tres" type="Material" id=42]
[ext_resource path="res://scenes/particles/InvincibleParticlesSmall.tres" type="Material" id=43]
[ext_resource path="res://scenes/shaders/Overlay.gdshader" type="Shader" id=44]
[ext_resource path="res://music/InvincibleStart.mp3" type="AudioStream" id=45]
[ext_resource path="res://scenes/player/PlayerCamera.gd" type="Script" id=46]
[ext_resource path="res://images/player/tux/big/ride_entity.png" type="Texture" id=47]
[ext_resource path="res://images/enemies/icedragon/idle.png" type="Texture" id=48]
[ext_resource path="res://images/enemies/icedragon/jump.png" type="Texture" id=49]

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 44 )
shader_param/overlay_color = Plane( 0.5, 0.5, 0.5, 0.5 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ ExtResource( 48 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 48 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 49 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 48 ) ],
"loop": true,
"name": "skid",
"speed": 5.0
}, {
"frames": [ ExtResource( 48 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 36 ) ],
"loop": true,
"name": "big",
"speed": 5.0
}, {
"frames": [ ExtResource( 35 ) ],
"loop": true,
"name": "small",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 23 ), ExtResource( 27 ) ],
"loop": true,
"name": "dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "duck",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "kick",
"speed": 5.0
}, {
"frames": [ ExtResource( 47 ) ],
"loop": true,
"name": "riding",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ) ],
"loop": true,
"name": "skid",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 17 ), ExtResource( 21 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 22 ), ExtResource( 20 ), ExtResource( 25 ) ],
"loop": true,
"name": "walk",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "duck",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "kick",
"speed": 5.0
}, {
"frames": [ ExtResource( 47 ) ],
"loop": true,
"name": "riding",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "skid",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="Animation" id=11]
resource_name = "black"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Control:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 44 )
shader_param/overlay_color = Plane( 0.8, 0.15, 0.1, 0.5 )

[sub_resource type="Animation" id=12]
resource_name = "red"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Control:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "starwarning"
length = 0.2
loop = true
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0470588, 1, 0.172549, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 14 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15, 30 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 32, 34 )

[sub_resource type="Animation" id=5]
resource_name = "default"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "invincible"
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="CanvasItemMaterial" id=18]
blend_mode = 1

[node name="Tux" type="KinematicBody2D" groups=["players"]]
collision_layer = 2
script = ExtResource( 28 )
fireball_scene = ExtResource( 37 )
invincible_star_time = 13.0
damage_safe_time = 2.0

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 29 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_bottom = 480
smoothing_speed = 25.0
script = ExtResource( 46 )

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="SFX" type="Node2D" parent="."]
script = ExtResource( 30 )

[node name="Jump" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 1 )

[node name="Shoot" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 38 )

[node name="JumpSmall" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 2 )
pitch_scale = 1.38

[node name="Skid" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 3 )

[node name="Hurt" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 32 )
pitch_scale = 1.02

[node name="Big" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 33 )
volume_db = -2.0

[node name="Fire" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 34 )
volume_db = -2.0

[node name="Invincible" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 45 )
bus = "Music"

[node name="Control" type="Control" parent="."]
material = SubResource( 10 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Dragon" type="AnimatedSprite" parent="Control"]
visible = false
position = Vector2( 0, 29 )
z_index = 1
frames = SubResource( 19 )
animation = "skid"
playing = true
offset = Vector2( 0, -12 )

[node name="GrabArm" type="AnimatedSprite" parent="Control"]
visible = false
use_parent_material = true
z_index = 2
frames = SubResource( 7 )
animation = "small"
offset = Vector2( 0, -12 )

[node name="SpriteSmall" type="AnimatedSprite" parent="Control"]
visible = false
use_parent_material = true
z_index = 1
frames = SubResource( 2 )
animation = "idle"
playing = true

[node name="SpriteBig" type="AnimatedSprite" parent="Control"]
use_parent_material = true
z_index = 1
frames = SubResource( 1 )
animation = "idle"
playing = true
offset = Vector2( 0, -12 )

[node name="SpriteColour" type="AnimationPlayer" parent="."]
autoplay = "black"
anims/black = SubResource( 11 )
anims/red = SubResource( 12 )
anims/starwarning = SubResource( 17 )

[node name="GrabPosition" type="Position2D" parent="."]
position = Vector2( 24, -12 )

[node name="HitboxSmall" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
z_index = 2
shape = SubResource( 3 )

[node name="HitboxBig" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10 )
z_index = 2
shape = SubResource( 4 )
disabled = true

[node name="HitboxRiding" type="CollisionShape2D" parent="."]
position = Vector2( 0, 29 )
z_index = 2
shape = SubResource( 20 )
disabled = true

[node name="InvincibleTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
one_shot = true

[node name="StarWarning" type="Timer" parent="."]
process_mode = 0
wait_time = 12.0
one_shot = true

[node name="JumpBuffer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true

[node name="SkidTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="WinTimer" type="Timer" parent="."]
wait_time = 9.0
one_shot = true

[node name="BounceRaycasts" type="Node2D" parent="."]
position = Vector2( 0, 18 )
z_index = 15

[node name="RayCast2D3" type="RayCast2D" parent="BounceRaycasts"]
position = Vector2( 14, 0 )
enabled = true
collision_mask = 24
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D" type="RayCast2D" parent="BounceRaycasts"]
enabled = true
collision_mask = 24
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D2" type="RayCast2D" parent="BounceRaycasts"]
position = Vector2( -14, 0 )
enabled = true
collision_mask = 24
collide_with_areas = true
collide_with_bodies = false

[node name="DuckRaycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -32 )

[node name="InvincibleAnimation" type="AnimationPlayer" parent="."]
anims/default = SubResource( 5 )
anims/invincible = SubResource( 6 )

[node name="InvincibleParticles" type="Node2D" parent="."]
script = ExtResource( 40 )

[node name="InvincibleTrail" type="Particles2D" parent="InvincibleParticles"]
material = SubResource( 18 )
z_index = 1
emitting = false
amount = 5
lifetime = 0.25
randomness = 0.5
local_coords = false
process_material = ExtResource( 42 )
texture = ExtResource( 39 )

[node name="InvincibleSmall" type="Particles2D" parent="InvincibleParticles"]
material = SubResource( 18 )
z_index = 2
emitting = false
amount = 7
lifetime = 0.2
process_material = ExtResource( 43 )
texture = ExtResource( 39 )

[node name="InvincibleBig" type="Particles2D" parent="InvincibleParticles"]
material = SubResource( 18 )
position = Vector2( 0, -16 )
z_index = 2
emitting = false
amount = 9
lifetime = 0.2
process_material = ExtResource( 41 )
texture = ExtResource( 39 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
rect = Rect2( -500, -10, 1000, 200 )

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="InvincibleTimer" to="." method="_on_InvincibleTimer_timeout"]
[connection signal="timeout" from="WinTimer" to="." method="_on_WinTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
